--- a/app/styles/_components.header.scss
+++ b/app/styles/_components.header.scss
@@ -8,6 +8,8 @@
   border-bottom: 1px solid #ccc;
   background-color: #eee;
   width: 100%;
+  transition: all 500ms ease-in-out;
+  transition-delay: 100ms;
 }
 
 .c-header__title {
